--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </div>
             <div class="tab-pane show fade" id="dashboard-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
               <!-- Streak -->
-               <div class="streak">
+               <div class="streak pt-3">
                 <div class="d-flex flex-column pb-3">
                   <h2 class="text-lg font-medium m-0">
                     4<svg width="13" height="16" viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
