--- a/index.html
+++ b/index.html
@@ -431,12 +431,29 @@
                           <path d="M8.5 12.6667V3.33333" stroke="#1F8B59" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
                           <path d="M3.83333 8L8.5 3.33333L13.1667 8" stroke="#1F8B59" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <span class="text-xs">1%</span>
+                        <span class="text-xs">100%</span>
+                      </span>
+                    </div>
+                    <div class="d-flex flex-column">
+                      <h3 class="text-xs font-semibold mb-0">Satisfied</h3>
+                      <p class="text-xs m-0">from 3 (last week)</p>
+                    </div>
+                  </li>
+
+                  <li class="vibe-meter-list-item unsatisfied p-2">
+                    <div class="d-flex justify-content-between">
+                      <h2 class="text-lg font-medium mb-1">70%</h2>
+                      <span class="d-flex align-items-center vibe-meter-stat align-self-start px-2 py-1 mt-2">
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 2px;">
+                          <path d="M8.5 3.33333V12.6667" stroke="#D71D1D" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M13.1667 8L8.50001 12.6667L3.83334 8" stroke="#D71D1D" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <span class="text-xs">4%</span>
                       </span>
                     </div>
                     <div class="d-flex flex-column">
                       <h3 class="text-xs font-semibold mb-0">Unsatisfied</h3>
-                      <p class="text-xs m-0">from 3 (last week)</p>
+                      <p class="text-xs m-0">from 74% (last week)</p>
                     </div>
                   </li>
                 </ul>
