Today indicator design

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="tab-pane show fade" id="dashboard-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
               <!-- Streak -->
                <div class="streak pt-3">
-                <div class="d-flex flex-column pb-3">
+                <div class="d-flex flex-column">
                   <h2 class="text-lg font-medium m-0">
                     4<svg width="13" height="16" viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M5.30963 9.27574H1.5L7.69037 1V6.84189H11.5L5.30963 15.1176V9.27574Z" fill="#F092F8" stroke="#F092F8" stroke-width="1.47498" stroke-linecap="round" stroke-linejoin="round"/>
@@ -308,6 +308,7 @@
                   </div>
 
                   <div class="timeline position-relative">
+                    <span class="today-indicator text-xs font-medium px-2 py-1 position-absolute">Today</span>
                     <p class="timeline-month text-xs mb-1">May</p>
                     <ul class="timeline-list d-flex list-unstyled">
                       <li class="timeline-list-item d-flex flex-column">
